--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Homework-LD" content="width=device-width, initial-scale=1.0">
-    <title>Homework-3</title>
+    <title>Homework-4</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -161,6 +161,37 @@ width="264" />
 <a class="footer-logo" href="./index.html">Web<span class="footer-name-stu">Studio</span> </a>
 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
 growth solutions.</p>
+<p class="social-mane">Social media</p>
+<ul class="icon-list">
+<li class="icon-item">
+<a href="" class="icon-link">
+<svg class="icon-icon" width="24" height="24">
+<use href="./images/symbol-defs.svg#icon-instagram"></use>
+</svg>
+</a>
+</li>
+<li class="icon-item">
+<a href="" class="icon-link">
+<svg class="icon-icon" width="24" height="24">
+<use href="./images/symbol-defs.svg#icon-twitter"></use>
+</svg>
+</a>
+</li>
+<li class="icon-item">
+<a href="" class="icon-link">
+<svg class="icon-icon" width="24" height="24">
+<use href="./images/symbol-defs.svg#icon-facebook"></use>
+</svg>
+</a>
+</li>
+<li class="icon-item">
+<a href="" class="icon-link">
+<svg class="icon-icon" width="24" height="24">
+<use href="./images/symbol-defs.svg#icon-linkedin"></use>
+</svg>
+</a>
+</li>
+</ul>
 </div>
 </footer>
 </body>
