--- a/index.html
+++ b/index.html
@@ -78,6 +78,36 @@ width="264" />
 <div class="name-worker">   
 <h3 class="team-page-name">Mark Guerrero</h3>
 <p class="team-page-work">Product Designer</p>
+<ul class="icon-list">
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+    </svg>
+    </a>
+    </li>
+    </ul>
 </div>
 </li>
 <li class="team-page"> <img src="./images/img2x2_.jpg" class="team-page-photo" alt="Photo Frontend-Developer"
@@ -85,6 +115,36 @@ width="264" />
 <div class="name-worker"> 
 <h3 class="team-page-name">Tom Ford</h3>
 <p class="team-page-work">Frontend Developer</p>
+<ul class="icon-list">
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+    </svg>
+    </a>
+    </li>
+    </ul>
 </div>
 </li>
 <li class="team-page"><img src="./images/img2x3_.jpg" class="team-page-photo" alt="Photo-Marketing"
@@ -92,6 +152,36 @@ width="264" />
 <div class="name-worker"> 
 <h3 class="team-page-name">Camila Garcia</h3>
 <p class="team-page-work">Marketing</p>
+<ul class="icon-list">
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon-team" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+    </svg>
+    </a>
+    </li>
+    </ul>
 </div>
 </li>
 <li class="team-page"><img src="./images/img2x4_.jpg" class="team-page-photo" alt="Photo-UI-Designer"
@@ -99,6 +189,36 @@ width="264" />
 <div class="name-worker"> 
 <h3 class="team-page-name">Daniel Wilson</h3>
 <p class="team-page-work">UI Designer</p>
+<ul class="icon-list">
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+    </svg>
+    </a>
+    </li>
+    <li class="icon-item">
+    <a href="" class="icon-link">
+    <svg class="icon-icon" width="16" height="16">
+    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+    </svg>
+    </a>
+    </li>
+    </ul>
 </div>
 </li>
 </ul>
