--- a/index.html
+++ b/index.html
@@ -78,31 +78,31 @@ width="264" />
 <div class="name-worker">   
 <h3 class="team-page-name">Mark Guerrero</h3>
 <p class="team-page-work">Product Designer</p>
-<ul class="icon-list">
+<ul class="icon-list-team">
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
     </a>
@@ -115,31 +115,31 @@ width="264" />
 <div class="name-worker"> 
 <h3 class="team-page-name">Tom Ford</h3>
 <p class="team-page-work">Frontend Developer</p>
-<ul class="icon-list">
+<ul class="icon-list-team">
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
     </a>
@@ -152,7 +152,7 @@ width="264" />
 <div class="name-worker"> 
 <h3 class="team-page-name">Camila Garcia</h3>
 <p class="team-page-work">Marketing</p>
-<ul class="icon-list">
+<ul class="icon-list-team">
     <li class="icon-item">
     <a href="" class="icon-link">
     <svg class="icon-icon-team" width="16" height="16">
@@ -162,21 +162,21 @@ width="264" />
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
     </a>
@@ -189,31 +189,31 @@ width="264" />
 <div class="name-worker"> 
 <h3 class="team-page-name">Daniel Wilson</h3>
 <p class="team-page-work">UI Designer</p>
-<ul class="icon-list">
+<ul class="icon-list-team">
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
     <a href="" class="icon-link">
-    <svg class="icon-icon" width="16" height="16">
+    <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
     </a>
