--- a/index.html
+++ b/index.html
@@ -46,21 +46,37 @@
 <h2 class="visually-hidden">info</h2>
 <ul class="feature-list">
 <li class="feature-item">
+<a href="" class="icon-link-feature">
+<svg class="icon-icon-team" width="264" height="112">
+<use href="./images/icon-defs.svg#icon-icon-1"></use>
+</svg> </a>
 <h3 class="feature-subtitle">Strategy</h3>
 <p class="feature-item-title">Our goal is to identify the business problem to walk away with the
 perfect and creative solution.</p>
 </li>
 <li class="feature-item">
+<a href="" class="icon-link-feature">
+<svg class="icon-icon-team" width="264" height="112">
+<use href="./images/icon-defs.svg#icon-icon-2"></use>
+</svg> </a>
 <h3 class="feature-subtitle">Punctuality</h3>
 <p class="feature-item-title">Bring the key message to the brand's audience for the best price
 within the shortest possible time.</p>
 </li>
 <li class="feature-item">
+<a href="" class="icon-link-feature">
+<svg class="icon-icon-team" width="264" height="112">
+<use href="./images/icon-defs.svg#icon-icon-3"></use>
+</svg> </a>
 <h3 class="feature-subtitle">Diligence</h3>
 <p class="feature-item-title">Research and confirm brands that present the strongest digital
 growth opportunities and minimize risk.</p>
 </li>
 <li class="feature-item">
+<a href="" class="icon-link-feature">
+<svg class="icon-icon-team" width="264" height="112">
+<use href="./images/icon-defs.svg#icon-icon-4"></use>
+</svg> </a>
 <h3 class="feature-subtitle">Technologies</h3>
 <p class="feature-item-title">Design practice focused on digital experiences. We bring forth a
 deep passion for problem-solving.</p>
