--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <ul class="feature-list">
 <li class="feature-item">
 <a href="" class="icon-link-feature">
-<svg class="icon-icon-team" width="264" height="112">
+<svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-1"></use>
 </svg> </a>
 <h3 class="feature-subtitle">Strategy</h3>
@@ -56,7 +56,7 @@ perfect and creative solution.</p>
 </li>
 <li class="feature-item">
 <a href="" class="icon-link-feature">
-<svg class="icon-icon-team" width="264" height="112">
+<svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-2"></use>
 </svg> </a>
 <h3 class="feature-subtitle">Punctuality</h3>
@@ -65,7 +65,7 @@ within the shortest possible time.</p>
 </li>
 <li class="feature-item">
 <a href="" class="icon-link-feature">
-<svg class="icon-icon-team" width="264" height="112">
+<svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-3"></use>
 </svg> </a>
 <h3 class="feature-subtitle">Diligence</h3>
@@ -74,7 +74,7 @@ growth opportunities and minimize risk.</p>
 </li>
 <li class="feature-item">
 <a href="" class="icon-link-feature">
-<svg class="icon-icon-team" width="264" height="112">
+<svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-4"></use>
 </svg> </a>
 <h3 class="feature-subtitle">Technologies</h3>
