--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav class="header-menu">
 <a class="header-name-logo" href="./index.html">Web<span class="logo-name-stu">Studio</span> </a>
 <ul class="header-menu-nav">
-<li><a class="header-item" href="./index.html">Studio</a></li>
+<li><a class="header-item item-studio" href="./index.html">Studio</a></li>
 <li><a class="header-item" href="">Portfolio</a></li>
 <li><a class="header-item" href="">Contacts</a></li>
 </ul>
