--- a/index.html
+++ b/index.html
@@ -96,28 +96,28 @@ width="264" />
 <p class="team-page-work">Product Designer</p>
 <ul class="icon-list-team">
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
@@ -133,13 +133,13 @@ width="264" />
 <p class="team-page-work">Frontend Developer</p>
 <ul class="icon-list-team">
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
@@ -147,14 +147,14 @@ width="264" />
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
@@ -170,28 +170,28 @@ width="264" />
 <p class="team-page-work">Marketing</p>
 <ul class="icon-list-team">
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
@@ -207,28 +207,28 @@ width="264" />
 <p class="team-page-work">UI Designer</p>
 <ul class="icon-list-team">
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
