--- a/index.html
+++ b/index.html
@@ -95,28 +95,28 @@ width="264" />
 <h3 class="team-page-name">Mark Guerrero</h3>
 <p class="team-page-work">Product Designer</p>
 <ul class="icon-list-team">
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -132,7 +132,7 @@ width="264" />
 <h3 class="team-page-name">Tom Ford</h3>
 <p class="team-page-work">Frontend Developer</p>
 <ul class="icon-list-team">
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -140,20 +140,20 @@ width="264" />
     </a>
     </li>
     <li class="icon-item-team">
-    <a href="" class="icon-link">
+    <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -169,28 +169,28 @@ width="264" />
 <h3 class="team-page-name">Camila Garcia</h3>
 <p class="team-page-work">Marketing</p>
 <ul class="icon-list-team">
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -206,28 +206,28 @@ width="264" />
 <h3 class="team-page-name">Daniel Wilson</h3>
 <p class="team-page-work">UI Designer</p>
 <ul class="icon-list-team">
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
-    <li class="icon-item">
+    <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
