--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <h2 class="visually-hidden">info</h2>
 <ul class="feature-list">
 <li class="feature-item">
+<div class="feature-item-one">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-1"></use>
@@ -53,8 +54,10 @@
 <h3 class="feature-subtitle">Strategy</h3>
 <p class="feature-item-title">Our goal is to identify the business problem to walk away with the
 perfect and creative solution.</p>
+</div>
 </li>
 <li class="feature-item">
+<div class="feature-item-two">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-2"></use>
@@ -62,8 +65,10 @@ perfect and creative solution.</p>
 <h3 class="feature-subtitle">Punctuality</h3>
 <p class="feature-item-title">Bring the key message to the brand's audience for the best price
 within the shortest possible time.</p>
+</div>
 </li>
 <li class="feature-item">
+<div class="feature-item-tree">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-3"></use>
@@ -71,8 +76,10 @@ within the shortest possible time.</p>
 <h3 class="feature-subtitle">Diligence</h3>
 <p class="feature-item-title">Research and confirm brands that present the strongest digital
 growth opportunities and minimize risk.</p>
+</div>
 </li>
 <li class="feature-item">
+<div class="feature-item-four">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-4"></use>
@@ -80,6 +87,7 @@ growth opportunities and minimize risk.</p>
 <h3 class="feature-subtitle">Technologies</h3>
 <p class="feature-item-title">Design practice focused on digital experiences. We bring forth a
 deep passion for problem-solving.</p>
+</div>
 </li>
 </ul>
 </div>
