--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h2 class="visually-hidden">info</h2>
 <ul class="feature-list">
 <li class="feature-item">
-<div class="feature-item-one">
+<div class="feature-one">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-1"></use>
@@ -57,7 +57,7 @@ perfect and creative solution.</p>
 </div>
 </li>
 <li class="feature-item">
-<div class="feature-item-two">
+<div class="feature-one">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-2"></use>
@@ -67,7 +67,7 @@ perfect and creative solution.</p>
 within the shortest possible time.</p>
 </div>
 </li>
-<li class="feature-item">
+<li class="feature-one">
 <div class="feature-item-tree">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
@@ -79,7 +79,7 @@ growth opportunities and minimize risk.</p>
 </div>
 </li>
 <li class="feature-item">
-<div class="feature-item-four">
+<div class="feature-one">
 <a href="" class="icon-link-feature">
 <svg class="icon-icon-feature" width="264" height="112">
 <use href="./images/icon-defs.svg#icon-icon-4"></use>
