--- a/index.html
+++ b/index.html
@@ -250,42 +250,54 @@ width="264" />
 <h2 class="portfolio-name">Our Portfolio</h2>
 <ul class="portfolio-list">
 <li class="portfolio-page">
+<div class="portfolio-page-image">
 <img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" />
+</div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Banking App</h3>
 <p class="portfolio-work">App</p>
 </div>
 </li>
 <li class="portfolio-page">
+<div class="portfolio-page-image">
 <img src="./images/2-min.jpg" class="portfolio-photo" alt="market" width="360" />
+</div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Cashless Payment</h3>
 <p class="portfolio-work">Marketing</p>
 </div>
 </li>
 <li class="portfolio-page">
+<div class="portfolio-page-image">
 <img src="./images/3-min.jpg" class="portfolio-photo" alt="medstat" width="360" />
+</div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Meditation App</h3>
 <p class="portfolio-work">App</p>
 </div>
 </li>
 <li class="portfolio-page">
+<div class="portfolio-page-image">
 <img src="./images/4-min.jpg" class="portfolio-photo" alt="taxi" width="360" />
+</div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Taxi Service</h3>
 <p class="portfolio-work">Marketing</p>
 </div>
 </li>
 <li class="portfolio-page">
+<div class="portfolio-page-image">
 <img src="./images/5-min.jpg" class="portfolio-photo" alt="design" width="360" />
+</div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Screen Illustrations</h3>
 <p class="portfolio-work">Design</p>
 </div>
 </li>
 <li class="portfolio-page">
+<div class="portfolio-page-image">
 <img src="./images/6-min.jpg" class="portfolio-photo" alt="courses" width="360" />
+</div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Online Courses</h3>
 <p class="portfolio-work">Marketing</p>
