--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@ width="264" />
 <li class="portfolio-page">
 <div class="portfolio-page-image">
 <img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" />
+<p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Banking App</h3>
@@ -261,6 +262,7 @@ width="264" />
 <li class="portfolio-page">
 <div class="portfolio-page-image">
 <img src="./images/2-min.jpg" class="portfolio-photo" alt="market" width="360" />
+<p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Cashless Payment</h3>
@@ -270,6 +272,7 @@ width="264" />
 <li class="portfolio-page">
 <div class="portfolio-page-image">
 <img src="./images/3-min.jpg" class="portfolio-photo" alt="medstat" width="360" />
+<p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Meditation App</h3>
@@ -279,6 +282,7 @@ width="264" />
 <li class="portfolio-page">
 <div class="portfolio-page-image">
 <img src="./images/4-min.jpg" class="portfolio-photo" alt="taxi" width="360" />
+<p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Taxi Service</h3>
@@ -288,6 +292,7 @@ width="264" />
 <li class="portfolio-page">
 <div class="portfolio-page-image">
 <img src="./images/5-min.jpg" class="portfolio-photo" alt="design" width="360" />
+<p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Screen Illustrations</h3>
@@ -297,6 +302,7 @@ width="264" />
 <li class="portfolio-page">
 <div class="portfolio-page-image">
 <img src="./images/6-min.jpg" class="portfolio-photo" alt="courses" width="360" />
+<p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>
 <div class="portfolio-names">
 <h3 class="portfolio-title">Online Courses</h3>
