--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <div class="container header-container">
 <nav class="header-menu">
 <a class="header-name-logo" href="./index.html">Web<span class="logo-name-stu">Studio</span> </a>
-<ul class="header-menu-nav">
+<ul class="header-menu-nav ul-one">
 <li><a class="header-item item-studio" href="./index.html">Studio</a></li>
 <li><a class="header-item" href="">Portfolio</a></li>
 <li><a class="header-item" href="">Contacts</a></li>
 </ul>
 </nav>  
 <address class="header-address">   
-<ul class="header-address-menu">
+<ul class="header-address-menu ul-one">
 <li> <a class="header-address-item header-address-item-one" href="mailto:info@devstudio.com"> info@devstudio.com </a> </li>
 <li> <a class="header-address-item header-address-item-two" href="tel:+110001111111"> +11 (000) 111-11-11 </a> </li>
 </ul>
