--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ within the shortest possible time.</p>
 </div>
 </li>
 <li class="feature-one">
-<div class="feature-item-tree">
+<div class="feature-one">
 <svg class="icon-icon-feature" width="64" height="64">
 <use href="./images/icon-defs.svg#icon-icon-3"></use>
 </svg>
