--- a/index.html
+++ b/index.html
@@ -316,10 +316,13 @@ width="264" />
     
 <footer class="footer-page">
 <div class="container footer-container">
+<div class="footer-container-one">
 <a class="footer-logo" href="./index.html">Web<span class="footer-name-stu">Studio</span> </a>
 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
 growth solutions.</p>
 <p class="social-mane">Social media</p>
+</div>
+<div class="footer-container-one">
 <ul class="icon-list">
 <li class="icon-item">
 <a href="" class="icon-link">
@@ -350,6 +353,7 @@ growth solutions.</p>
 </a>
 </li>
 </ul>
+</div>
 </div>
 </footer>
 </body>
