--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ width="264" />
 growth solutions.</p>
 <p class="social-mane">Social media</p>
 </div>
-<div class="footer-container-one">
+<div class="footer-container-two">
 <ul class="icon-list">
 <li class="icon-item">
 <a href="" class="icon-link">
