--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <li><a class="header-item" href="">Contacts</a></li>
 </ul>
 </nav>  
-<address class="header-address">   
+<address class="header-address item-studio">   
 <ul class="header-address-menu">
 <li> <a class="header-address-item header-address-item-one" href="mailto:info@devstudio.com"> info@devstudio.com </a> </li>
 <li> <a class="header-address-item header-address-item-two" href="tel:+110001111111"> +11 (000) 111-11-11 </a> </li>
