--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <li><a class="header-item" href="">Contacts</a></li>
 </ul>
 </nav>  
-<address class="header-address header-menu-nav">   
-<ul class="header-address-menu">
+<address class="header-address header-menu">   
+<ul class="header-address-menu header-menu-nav">
 <li> <a class="header-address-item header-address-item-one" href="./index.html"> info@devstudio.com </a> </li>
 <li> <a class="header-address-item header-address-item-two" href="./index.html"> +11 (000) 111-11-11 </a> </li>
 </ul>
