--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ perfect and creative solution.</p>
 within the shortest possible time.</p>
 </div>
 </li>
-<li class="feature-one">
+<li class="feature-item">
 <div class="feature-one">
 <svg class="icon-icon-feature" width="64" height="64">
 <use href="./images/icons.svg#icon-icon-3"></use>
