--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <li><a class="header-item" href="">Contacts</a></li>
 </ul>
 </nav>  
-<address class="header-address header-menu">   
+<address class="header-address">   
 <ul class="header-address-menu header-menu-nav">
-<li> <a class="header-address-item header-address-item-one" href="./index.html"> info@devstudio.com </a> </li>
-<li> <a class="header-address-item header-address-item-two" href="./index.html"> +11 (000) 111-11-11 </a> </li>
+<li> <a class="header-address-item address-one" href="./index.html"> info@devstudio.com </a> </li>
+<li> <a class="header-address-item address-two" href="./index.html"> +11 (000) 111-11-11 </a> </li>
 </ul>
 </address>
 </div>    
