--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <li class="feature-item">
 <div class="feature-one">
 <svg class="icon-icon-feature" width="64" height="64">
-<use href="../images/icons.svg#icon-icon-1"></use>
+<use href="./images/icons.svg#icon-icon-1"></use>
 </svg>
 <h3 class="feature-subtitle">Strategy</h3>
 <p class="feature-item-title">Our goal is to identify the business problem to walk away with the
@@ -58,7 +58,7 @@ perfect and creative solution.</p>
 <li class="feature-item">
 <div class="feature-one">
 <svg class="icon-icon-feature" width="64" height="64">
-<use href="../images/icons.svg#icon-icon-2"></use>
+<use href="./images/icons.svg#icon-icon-2"></use>
 </svg>
 <h3 class="feature-subtitle">Punctuality</h3>
 <p class="feature-item-title">Bring the key message to the brand's audience for the best price
@@ -68,7 +68,7 @@ within the shortest possible time.</p>
 <li class="feature-item">
 <div class="feature-one">
 <svg class="icon-icon-feature" width="64" height="64">
-<use href="../images/icons.svg#icon-icon-3"></use>
+<use href="./images/icons.svg#icon-icon-3"></use>
 </svg>
 <h3 class="feature-subtitle">Diligence</h3>
 <p class="feature-item-title">Research and confirm brands that present the strongest digital
@@ -78,7 +78,7 @@ growth opportunities and minimize risk.</p>
 <li class="feature-item">
 <div class="feature-one">
 <svg class="icon-icon-feature" width="64" height="64">
-<use href="../images/icons.svg#icon-icon-4"></use>
+<use href="./images/icons.svg#icon-icon-4"></use>
 </svg>
 <h3 class="feature-subtitle">Technologies</h3>
 <p class="feature-item-title">Design practice focused on digital experiences. We bring forth a
@@ -102,28 +102,28 @@ width="264" />
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-instagram"></use>
+    <use href="./images/icons.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-twitter"></use>
+    <use href="./images/icons.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-facebook"></use>
+    <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-linkedin"></use>
+    <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </a>
     </li>
@@ -139,28 +139,28 @@ width="264" />
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-instagram"></use>
+    <use href="./images/icons.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-twitter"></use>
+    <use href="./images/icons.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-facebook"></use>
+    <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-linkedin"></use>
+    <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </a>
     </li>
@@ -176,28 +176,28 @@ width="264" />
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-instagram"></use>
+    <use href="./images/icons.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-twitter"></use>
+    <use href="./images/icons.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-facebook"></use>
+    <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-linkedin"></use>
+    <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </a>
     </li>
@@ -213,28 +213,28 @@ width="264" />
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-instagram"></use>
+    <use href="./images/icons.svg#icon-instagram"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-twitter"></use>
+    <use href="./images/icons.svg#icon-twitter"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-facebook"></use>
+    <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
     </a>
     </li>
     <li class="icon-item-team">
     <a href="" class="icon-link-team">
     <svg class="icon-icon-team" width="16" height="16">
-    <use href="../images/icons.svg#icon-linkedin"></use>
+    <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </a>
     </li>
