--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </nav>  
 <address class="header-address">   
 <ul class="header-address-menu header-menu-nav">
-<li> <a class="header-address-item address-one" href="./index.html"> info@devstudio.com </a> </li>
-<li> <a class="header-address-item address-two" href="./index.html"> +11 (000) 111-11-11 </a> </li>
+<li> <a class="header-address-item address-one" href="mailto:info@devstudio.com"> info@devstudio.com </a> </li>
+<li> <a class="header-address-item address-two" href="tel:+110001111111"> +11 (000) 111-11-11 </a> </li>
 </ul>
 </address>
 </div>    
