--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@ width="264" />
 <p class="portfolio-work">App</p>
 </div>
 </li>
+<div class="potfolio-border"> 
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/4-min.jpg" class="portfolio-photo" alt="taxi" width="360" />
@@ -297,6 +298,7 @@ width="264" />
 <p class="portfolio-work">Marketing</p>
 </div>
 </li>
+</div>
 </ul>
 </div>
 </section>
