--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ width="264" />
     
 <section class="portfolio-main">
 <div class="container">
+<div class="potfolio-border">   
 <h2 class="portfolio-name">Our Portfolio</h2>
 <ul class="portfolio-list">
 <li class="portfolio-page">  
@@ -298,6 +299,7 @@ width="264" />
 </div>
 </li>
 </ul>
+</div>
 </section>
 </main>
     
