--- a/index.html
+++ b/index.html
@@ -254,14 +254,18 @@ width="264" />
 <div class="portfolio-names">
 <img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+</div>
+<div class="portfolio-names-two">   
 <h3 class="portfolio-title">Banking App</h3>
 <p class="portfolio-work">App</p>
 </div>
-</li>
+</li>    
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/2-min.jpg" class="portfolio-photo" alt="market" width="360" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+</div>
+<div class="portfolio-names-two">       
 <h3 class="portfolio-title">Cashless Payment</h3>
 <p class="portfolio-work">Marketing</p>
 </div>
@@ -269,31 +273,39 @@ width="264" />
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/3-min.jpg" class="portfolio-photo" alt="medstat" width="360" />
-<p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+ <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+</div>
+<div class="portfolio-names-two">       
 <h3 class="portfolio-title">Meditation App</h3>
 <p class="portfolio-work">App</p>
 </div>
-</li>
+</li>   
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/4-min.jpg" class="portfolio-photo" alt="taxi" width="360" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+</div>
+<div class="portfolio-names-two">       
 <h3 class="portfolio-title">Taxi Service</h3>
 <p class="portfolio-work">Marketing</p>
 </div>
-</li>
+</li>   
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/5-min.jpg" class="portfolio-photo" alt="design" width="360" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+</div>
+<div class="portfolio-names-two">       
 <h3 class="portfolio-title">Screen Illustrations</h3>
 <p class="portfolio-work">Design</p>
 </div>
-</li>
+</li>    
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/6-min.jpg" class="portfolio-photo" alt="courses" width="360" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+</div>
+<div class="portfolio-names-two">       
 <h3 class="portfolio-title">Online Courses</h3>
 <p class="portfolio-work">Marketing</p>
 </div>
@@ -301,8 +313,7 @@ width="264" />
 </ul>
 </div>
 </section>
-</main>
-    
+</main>   
 <footer class="footer-page">
 <div class="container footer-container">
 <div class="footer-container-one">
