--- a/index.html
+++ b/index.html
@@ -246,8 +246,7 @@ width="264" />
 </section>
     
 <section class="portfolio-main">
-<div class="container">
-<div class="potfolio-border">   
+<div class="container potfolio-border">   
 <h2 class="portfolio-name">Our Portfolio</h2>
 <ul class="portfolio-list">
 <li class="portfolio-page">  
@@ -314,6 +313,7 @@ width="264" />
 </div>
 </section>
 </main>   
+    
 <footer class="footer-page">
 <div class="container footer-container">
 <div class="footer-container-one">
