--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ width="264" />
 <ul class="portfolio-list">
 <li class="portfolio-page">  
 <div class="portfolio-names">
-<img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" height="300" />
+<img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>
 <div class="portfolio-names-two">   
