--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ width="264" />
 </section>
     
 <section class="portfolio-main">
-<div class="container potfolio-border">   
+<div class="container">   
 <h2 class="portfolio-name">Our Portfolio</h2>
 <ul class="portfolio-list">
 <li class="portfolio-page">  
