--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ width="264" />
 <ul class="portfolio-list">
 <li class="portfolio-page">  
 <div class="portfolio-names">
-<img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" />
+<img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>  
 <h3 class="portfolio-title">Banking App</h3>
@@ -259,7 +259,7 @@ width="264" />
 </li>    
 <li class="portfolio-page">
 <div class="portfolio-names">
-<img src="./images/2-min.jpg" class="portfolio-photo" alt="market" width="360" />
+<img src="./images/2-min.jpg" class="portfolio-photo" alt="market" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>      
 <h3 class="portfolio-title">Cashless Payment</h3>
@@ -267,7 +267,7 @@ width="264" />
 </li>
 <li class="portfolio-page">
 <div class="portfolio-names">
-<img src="./images/3-min.jpg" class="portfolio-photo" alt="medstat" width="360" />
+<img src="./images/3-min.jpg" class="portfolio-photo" alt="medstat" width="360" height="300" />
  <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>      
 <h3 class="portfolio-title">Meditation App</h3>
@@ -275,7 +275,7 @@ width="264" />
 </li>   
 <li class="portfolio-page">
 <div class="portfolio-names">
-<img src="./images/4-min.jpg" class="portfolio-photo" alt="taxi" width="360" />
+<img src="./images/4-min.jpg" class="portfolio-photo" alt="taxi" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>      
 <h3 class="portfolio-title">Taxi Service</h3>
@@ -283,7 +283,7 @@ width="264" />
 </li>   
 <li class="portfolio-page">
 <div class="portfolio-names">
-<img src="./images/5-min.jpg" class="portfolio-photo" alt="design" width="360" />
+<img src="./images/5-min.jpg" class="portfolio-photo" alt="design" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>      
 <h3 class="portfolio-title">Screen Illustrations</h3>
@@ -291,7 +291,7 @@ width="264" />
 </li>    
 <li class="portfolio-page">
 <div class="portfolio-names">
-<img src="./images/6-min.jpg" class="portfolio-photo" alt="courses" width="360" />
+<img src="./images/6-min.jpg" class="portfolio-photo" alt="courses" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>     
 <h3 class="portfolio-title">Online Courses</h3>
