--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav class="header-menu">
 <a class="header-name-logo" href="./index.html">Web<span class="logo-name-stu">Studio</span> </a>
 <ul class="header-menu-nav">
-<li><a class="header-item item-studio" href="./index.html">Studio</a></li>
+<li> <a class="header-item current" href="./index.html">Studio</a></li>
 <li><a class="header-item" href="">Portfolio</a></li>
 <li><a class="header-item" href="">Contacts</a></li>
 </ul>
@@ -253,49 +253,61 @@ width="264" />
 <div class="portfolio-names">
 <img src="./images/1-min.jpg" class="portfolio-photo" alt="bank" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-</div>  
+</div>
+<div class="portfolio-names-two">
 <h3 class="portfolio-title">Banking App</h3>
 <p class="portfolio-work">App</p>
+</div>
 </li>    
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/2-min.jpg" class="portfolio-photo" alt="market" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-</div>      
+</div> 
+<div class="portfolio-names-two">
 <h3 class="portfolio-title">Cashless Payment</h3>
 <p class="portfolio-work">Marketing</p>
+</div>
 </li>
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/3-min.jpg" class="portfolio-photo" alt="medstat" width="360" height="300" />
  <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>      
+<div class="portfolio-names-two">
 <h3 class="portfolio-title">Meditation App</h3>
 <p class="portfolio-work">App</p>
+</div>
 </li>   
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/4-min.jpg" class="portfolio-photo" alt="taxi" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>      
+<div class="portfolio-names-two">
 <h3 class="portfolio-title">Taxi Service</h3>
 <p class="portfolio-work">Marketing</p>
+</div>
 </li>   
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/5-min.jpg" class="portfolio-photo" alt="design" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>      
+<div class="portfolio-names-two">
 <h3 class="portfolio-title">Screen Illustrations</h3>
 <p class="portfolio-work">Design</p>
+</div>
 </li>    
 <li class="portfolio-page">
 <div class="portfolio-names">
 <img src="./images/6-min.jpg" class="portfolio-photo" alt="courses" width="360" height="300" />
 <p class="photo-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 </div>     
+<div class="portfolio-names-two">
 <h3 class="portfolio-title">Online Courses</h3>
 <p class="portfolio-work">Marketing</p>
+</div>
 </li>
 </ul>
 </div>
